k8-deploy/nodeport_deploy/prod/deployment-prod.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pdcm-web-ui
  namespace: pdcm-web-ui
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pdcm-web-ui
    spec:
      containers:
        - name: pdcm-web-ui
          image: "pdxfinder/pdcm-web-ui:prod"
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pdcm-web-ui-service
  namespace: pdcm-web-ui
  labels:
    name: pdcm-web-ui-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: pdcm-web-ui
  type: NodePort
