k8-deploy/nodeport_deploy/prod/service-cluster-ip-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdcm-web-ui-ingress-service
  namespace: pdcm-web-ui
  labels:
    name: pdcm-web-ui-ingress-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: pdcm-web-ui
  type: ClusterIP
