k8-deploy/nodeport_deploy/prod/service-nodeport-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdcm-web-ui-service
  namespace: pdcm-web-ui
  labels:
    name: pdcm-web-ui-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32404
  selector:
    app: pdcm-web-ui
  type: NodePort
